@@ -15,7 +15,7 @@
 
 %% an abstract and keywords
 \Abstract{
-The \pkg{rebmix} package for \proglang{R} provides functions for random univariate and multivariate finite mixture generation, number of components, component weights and component parameters estimation, bootstrapping and plotting of the finite mixtures. It relies on the REBMIX algorithm that requires preprocessing, information criterion and conditionally independent normal, lognormal, Weibull, gamma, binomial, Poisson or Dirac component densities. The rest is accomplished by the algorithm optimizing the component parameters, mixing weights and number of components successively based on the boundary conditions, such as the maximum number of components, total of positive relative deviations, number of classes or nearest neighbours. The algorithm is robust and time efficient and is insensitive to the number of components and random variables. It can be used either to assess the initial set of the unknown parameters and number of components for, e.g., the EM algorithm or as a standalone procedure that is a good compromise between the nonparametric and parametric methods to the finite mixture estimation. Moreover, \pkg{rebmix} is compared to the \pkg{mixtools} and \pkg{mclust} packages. The datasets analysed are the galaxy, iris, wine, complex 1, complex 2 and simulated 1.
+The \pkg{rebmix} package for \proglang{R} provides functions for random univariate and multivariate finite mixture generation, number of components, component weights and component parameters estimation, bootstrapping and plotting of the finite mixtures. It relies on the REBMIX algorithm that requires preprocessing, information criterion and conditionally independent normal, lognormal, Weibull, gamma, binomial, Poisson or Dirac component densities. The rest is accomplished by the algorithm optimizing the component parameters, mixing weights and number of components successively based on the boundary conditions, such as the maximum number of components, total of positive relative deviations, number of classes or nearest neighbours. The algorithm is robust and time efficient and is insensitive to the number of components and random variables. It can be used either to assess the initial set of the unknown parameters and number of components for, e.g., the EM algorithm or as a standalone procedure that is a good compromise between the nonparametric and parametric methods to the finite mixture estimation. The datasets analysed are the galaxy, iris, wine, complex 1, complex 2 and simulated 1.
 }
 \Keywords{continuous variable, discrete variable, finite mixture, parameter estimation, \proglang{R} software, REBMIX algorithm}
 \Plainkeywords{continuous variable, discrete variable, finite mixture, parameter estimation, R software, REBMIX algorithm}
@@ -648,7 +648,7 @@ The \code{complex1$Dataset} holds a list of data frames of size $n \times d$. Se
 <<rebmix-code, split = FALSE, results = hide, keep.source = FALSE>>=
 ## Estimate number of components, component weights and component parameters.
 
-time1 <- system.time(
+time <- system.time(
 complex1est1 <- REBMIX(Dataset = complex1$Dataset,
   Preprocessing = "histogram",
   cmax = 20,
@@ -659,87 +659,19 @@ complex1est1 <- REBMIX(Dataset = complex1$Dataset,
   b = 0)
 )
 @
-The \code{normalmixEM} function in \pkg{mixtools} \citep{Benaglia_2009} is applied to assess the predictive normal mixture parameters for the \code{complex1}
-dataset, too.
-<<rebmix-code, split = FALSE, echo = FALSE, results = hide, keep.source = FALSE>>=
-library("mixtools")
-@
-<<rebmix-code, split = FALSE, results = hide, keep.source = FALSE>>=
-time2 <- system.time(
-for (i in 2:20) {
-  complex1est2 <- normalmixEM(x = complex1$Dataset[[1]][, 1], k = i, epsilon = 1e-03)
-
-  if ((i == 2) || (complex1est2$loglik > loglik)) {
-    loglik <- complex1est2$loglik
-    k <- i
-  }
-}
-)
-@
 As the true number of components is supposed to be unknown, the predictive normal mixture parameters are estimated for $2 \leq \texttt{k} \leq 20$ as in the case
-of the REBMIX algorithm. The \code{normalmixEM} function attains maximum $\operatorname{log} L = \Sexpr{format(loglik, digits = 3)}$ at $\Sexpr{format(k, digits = 3)}$
-components in $\Sexpr{format(time2[3], digits = 3)} \unit{s}$, where the calculation time depends on random \code{mu} and \code{sigma}. See \code{help("normalmixEM")}
-in \pkg{mixtools} for details. On the other hand the \code{REBMIX} function yields $\operatorname{log} L = \Sexpr{format(as.numeric(complex1est1$summary[1, "logL"]), digits = 3)}$
-at $\Sexpr{format(as.numeric(complex1est1$summary[1, "c"]), digits = 3)}$ components in $\Sexpr{format(time1[3], digits = 3)} \unit{s}$.
-<<rebmix-code, split = FALSE, results = hide, keep.source = FALSE>>=
-lambda <- as.numeric(complex1est1$w[[1]])
-mu <- as.numeric(complex1est1$Theta[[1]][2, ])
-sigma <- as.numeric(complex1est1$Theta[[1]][3, ])
-
-time3 <- system.time(
-complex1est3 <- normalmixEM(
-  x = complex1$Dataset[[1]][, 1],
-  lambda = lambda,
-  mu = mu,
-  sigma = sigma,
-  epsilon = 1e-03)
-)
-@
-If the \code{REBMIX} function is used to assess the initial set of the unknown parameters and number of components for \code{normalmixEM}, then $\operatorname{log}
-L = \Sexpr{format(complex1est3$loglik, digits = 3)}$ at $\Sexpr{format(as.numeric(complex1est1$summary[1, "c"]), digits = 3)}$ components in $\Sexpr{format(time1[3] + time3[3], digits = 3)} \unit{s}$.
-
-The \code{Mclust} function in \pkg{mclust} \citep{Fraley_2007} is finally applied to assess the predictive normal mixture parameters for the same dataset. See
-\code{help("Mclust")} in \pkg{mclust} for details.
-<<rebmix-code, split = FALSE, echo = FALSE, results = hide, keep.source = FALSE>>=
-library("mclust")
-@
-<<rebmix-code, split = FALSE, results = hide, keep.source = FALSE>>=
-time4 <- system.time(
-complex1est4 <- Mclust(data = complex1$Dataset[[1]], G = 1:20, modelNames = "V")
-)
-@
-In this case $\operatorname{log} L = \Sexpr{format(complex1est4$loglik, digits = 3)}$ at $\Sexpr{format(complex1est4$parameters$variance$G, digits = 3)}$ components
-in $\Sexpr{format(time4[3], digits = 3)} \unit{s}$. To plot the \pkg{rebmix} mixture in Figure~\ref{figure:complex1} the \code{plot} method is called. The
-\pkg{mixtools} and \pkg{mclust} predictive normal mixture densities are calculated and added to the \code{plot} by calling the \code{points} method.
+of the REBMIX algorithm. The \code{REBMIX} function yields $\operatorname{log} L = \Sexpr{format(as.numeric(complex1est1$summary[1, "logL"]), digits = 3)}$
+at $\Sexpr{format(as.numeric(complex1est1$summary[1, "c"]), digits = 3)}$ components in $\Sexpr{format(time[3], digits = 3)} \unit{s}$. To plot the \pkg{rebmix} mixture in Figure~\ref{figure:complex1} the \code{plot} method is called.
 <<rebmix-code, split = FALSE, results = hide, keep.source = FALSE>>=
 plot(complex1est1, npts = 1000)
-
-x <- seq(from = complex1$ymin, to = complex1$ymax, length.out = 1000)
-
-y <- array(dim = length(x))
-z <- array(dim = length(x))
-
-sd <- sqrt(complex1est4$parameters$variance$sigmasq)
-
-for (i in 1:length(x)) {
-  y[i] <- sum(complex1est3$lambda * dnorm(x[i], mean = complex1est3$mu, sd = complex1est3$sigma))
-  z[i] <- sum(complex1est4$parameters$pro * dnorm(x[i], mean = complex1est4$parameters$mean, sd = sd))
-}
-
-points(x, y, type = "l", col = "red", lty = "dashed")
-points(x, z, type = "l", col = "blue", lty = "dashed")
 @
 \begin{figure}[t] \centering
 <<complex1-fig, fig = TRUE, pdf = FALSE, png = TRUE, eps = FALSE, height = 2.5, width = 5.5, echo = false, keep.source = FALSE, resolution = 100>>=
 ## Visualize Figure 3.
 
 plot(complex1est1, npts = 1000)
-
-points(x, y, type = "l", col = "red", lty = "dashed")
-
-points(x, z, type = "l", col = "blue", lty = "dashed")
 @
-\caption{Complex 1 dataset. Empirical densities (circles) and predictive \pkg{rebmix}, \pkg{mixtools} and \pkg{mclust} normal mixture densities in black solid line and in red and blue dashed lines.}\label{figure:complex1}
+\caption{Complex 1 dataset. Empirical density (circles) and predictive \pkg{rebmix} normal mixture density in black solid line.}\label{figure:complex1}
 \end{figure}
 \subsection[Complex 2 dataset]{Complex 2 dataset}\label{subsec:complex2_dataset}
 A multivariate mixed continuous-discrete $5$ component mixture is generated here by calling the \code{RNGMIX} function.
@@ -854,11 +786,11 @@ simulated1 <- RNGMIX(Dataset = paste("Simulated1_", 1:100, sep = ""),
   n = n,
   Theta = Theta)
 @
-In total, $100$ finite mixture estimations are performed by calling the \code{REBMIX} and \code{Mclust} functions.
+In total, $100$ finite mixture estimations are performed by calling the \code{REBMIX} function.
 <<rebmix-code, split = FALSE, results = hide, keep.source = FALSE>>=
 ## Estimate number of components, component weights and component parameters.
 
-time1 <- system.time(
+time <- system.time(
 simulated1est1 <- REBMIX(simulated1$Dataset,
   Preprocessing = "histogram",
   Criterion = "BIC",
@@ -868,32 +800,17 @@ simulated1est1 <- REBMIX(simulated1$Dataset,
   b = 0)
 )
 
-c1 <- as.numeric(simulated1est1$summary$c)
-IC1 <- as.numeric(simulated1est1$summary$IC)
-
-c2 <- array(dim = 100)
-IC2 <- array(dim = 100)
-
-time2 <- system.time(
-for (i in 1:100) {
-  simulated1est2 <- Mclust(simulated1$Dataset[[i]], G = 1:10, modelNames = "VVI")
-
-  c2[i] <- simulated1est2$parameters$variance$G
-  IC2[i] <- abs(simulated1est2$bic)
-}
-)
+c <- as.numeric(simulated1est1$summary$c)
+IC <- as.numeric(simulated1est1$summary$IC)
 @
 The results are as follows:
 <<rebmix-code, split = FALSE, keep.source = FALSE>>=
 ## Visualize results.
 
-summary(c1)
-summary(IC1, digits = 5)
-
-summary(c2)
-summary(IC2, digits = 5)
+summary(c)
+summary(IC, digits = 5)
 @
-The \code{REBMIX} function predicts $\Sexpr{format(mean(c1), digits = 3)}$ components on average in $\Sexpr{format(time1[3], digits = 3)} \unit{s}$, where probability $\Prob$ of identifying exactly $c = 5$ components equals $\Sexpr{format(length(c1[c1 == 5]) / length(c1), digits = 3)}$. The fastest histogram preprocessing results in the highest probability of identifying the true number of components and in the most suitable average number of components $c$ for the simulated 1 dataset. The Parzen window and $k$-nearest neighbour are therefore left out here. The \code{Mclust} function on the other hand predicts $\Sexpr{format(mean(c2), digits = 3)}$ components on average in $\Sexpr{format(time2[3], digits = 3)} \unit{s}$, where probability $\Prob$ of identifying exactly $c = 5$ components equals $\Sexpr{format(length(c2[c2 == 5]) / length(c2), digits = 3)}$.
+The \code{REBMIX} function predicts $\Sexpr{format(mean(c), digits = 3)}$ components on average in $\Sexpr{format(time[3], digits = 3)} \unit{s}$, where probability $\Prob$ of identifying exactly $c = 5$ components equals $\Sexpr{format(length(c[c == 5]) / length(c), digits = 3)}$. The fastest histogram preprocessing results in the highest probability of identifying the true number of components and in the most suitable average number of components $c$ for the simulated 1 dataset. The Parzen window and $k$-nearest neighbour are therefore left out here.
 <<rebmix-code, split = FALSE, echo = FALSE, results = hide, keep.source = FALSE>>=
 rm(list = ls())
 @
